push menambahkan fitur untuk menambahkan lomba, perubahan pada kolom2 database, perubahan pada dashboard
